// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DarkMode Dropdown component renders dark mode dropdown 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-1:active:before,
.emotion-1:hover:before,
.emotion-1:focus:before,
.emotion-1[data-hover='true']:before,
.emotion-1[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:active,
.emotion-1:hover,
.emotion-1[data-hover='true'] {
  color: #001E2B;
}

.emotion-1:active::before,
.emotion-1:hover::before,
.emotion-1[data-hover='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-1:focus-visible::before,
.emotion-1[data-focus='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 {
  display: none;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Sun Icon"
          class="emotion-3"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
        >
          <path
            d="M12.24 10.83C11.85 10.44 11.22 10.44 10.83 10.83C10.44 11.22 10.44 11.85 10.83 12.24L11.54 12.95C11.93 13.34 12.56 13.34 12.95 12.95C13.34 12.56 13.34 11.93 12.95 11.54L12.24 10.83Z"
            fill="currentColor"
          />
          <path
            d="M8 12C7.45 12 7 12.45 7 13V14C7 14.55 7.45 15 8 15C8.55 15 9 14.55 9 14V13C9 12.45 8.55 12 8 12Z"
            fill="currentColor"
          />
          <path
            d="M8 11C9.65685 11 11 9.65685 11 8C11 6.34315 9.65685 5 8 5C6.34315 5 5 6.34315 5 8C5 9.65685 6.34315 11 8 11Z"
            fill="currentColor"
          />
          <path
            d="M14 7H13C12.45 7 12 7.45 12 8C12 8.55 12.45 9 13 9H14C14.55 9 15 8.55 15 8C15 7.45 14.55 7 14 7Z"
            fill="currentColor"
          />
          <path
            d="M3.76 10.83L3.05 11.54C2.66 11.93 2.66 12.56 3.05 12.95C3.44 13.34 4.07 13.34 4.46 12.95L5.17 12.24C5.56 11.85 5.56 11.22 5.17 10.83C4.78 10.44 4.15 10.44 3.76 10.83Z"
            fill="currentColor"
          />
          <path
            d="M8 4C8.55 4 9 3.55 9 3V2C9 1.45 8.55 1 8 1C7.45 1 7 1.45 7 2V3C7 3.55 7.45 4 8 4Z"
            fill="currentColor"
          />
          <path
            d="M3.76 5.17C4.15 5.56 4.78 5.56 5.17 5.17C5.56 4.78 5.56 4.15 5.17 3.76L4.46 3.05C4.07 2.66 3.44 2.66 3.05 3.05C2.66 3.44 2.66 4.07 3.05 4.46L3.76 5.17Z"
            fill="currentColor"
          />
          <path
            d="M4 8C4 7.45 3.55 7 3 7H2C1.45 7 1 7.45 1 8C1 8.55 1.45 9 2 9H3C3.55 9 4 8.55 4 8Z"
            fill="currentColor"
          />
          <path
            d="M12.24 5.17L12.95 4.46C13.34 4.07 13.34 3.44 12.95 3.05C12.56 2.66 11.93 2.66 11.54 3.05L10.83 3.76C10.44 4.15 10.44 4.78 10.83 5.17C11.22 5.56 11.85 5.56 12.24 5.17Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`DarkMode Dropdown component renders dark mode dropdown 2`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-1:active:before,
.emotion-1:hover:before,
.emotion-1:focus:before,
.emotion-1[data-hover='true']:before,
.emotion-1[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:active,
.emotion-1:hover,
.emotion-1[data-hover='true'] {
  color: #001E2B;
}

.emotion-1:active::before,
.emotion-1:hover::before,
.emotion-1[data-hover='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-1:focus-visible::before,
.emotion-1[data-focus='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 {
  display: none;
}

.emotion-5 {
  margin: 0;
  border: none;
  padding: 0;
  overflow: visible;
  background-color: transparent;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  transition-property: opacity,transform,overlay;
  transition-duration: 150ms;
  transition-timing-function: ease-in-out;
  transition-behavior: allow-discrete;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
  left: 0px;
  position: absolute;
  top: 6px;
  max-height: var(--lg-popover-max_height, unset);
  max-width: var(--lg-popover-max_width, unset);
  transform-origin: top left;
  opacity: 0;
  -webkit-transform: translate3d(0, -6px, 0) scale(0.8);
  -moz-transform: translate3d(0, -6px, 0) scale(0.8);
  -ms-transform: translate3d(0, -6px, 0) scale(0.8);
  transform: translate3d(0, -6px, 0) scale(0.8);
}

.emotion-5::backdrop {
  transition-property: background,overlay;
  transition-duration: 150ms;
  transition-timing-function: ease-in-out;
  transition-behavior: allow-discrete;
}

.emotion-6 {
  width: 210px;
  max-height: var(--lg-popover-max_height, 344);
  border-radius: 12px;
  overflow: auto;
  padding: 12px 0;
  background-color: #FFFFFF;
  border: 1px solid #E8EDEB;
  box-shadow: 0px 2px 4px 1px color-mix(in srgb, #001E2B 15%, transparent);
  box-shadow: unset;
  background-color: #001E2B;
  border: 1px solid #889397;
}

.emotion-6.emotion-6 {
  min-width: 124px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin-top: 8px;
  font-weight: 700;
}

.emotion-7 {
  overflow: auto;
  margin-block-start: 0px;
  margin-block-end: 0px;
  -webkit-padding-start: 0px;
  padding-inline-start: 0px;
  padding: 0px;
}

.emotion-8 {
  width: 100%;
  padding: 0;
  list-style: none;
}

.emotion-9 {
  display: block;
  position: relative;
  list-style: none;
  outline: none;
  border: unset;
  margin: 0;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  padding: 12px 12px;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: background-color,color;
  color: #001E2B;
  background-color: #FFFFFF;
  display: block;
  width: 100%;
  min-height: 32px;
  background-color: #FFFFFF;
  padding: 8px 12px;
  background-color: #001E2B;
}

.emotion-9:hover {
  outline: none;
  color: #001E2B;
  background-color: #E8EDEB;
}

.emotion-9:hover .lg-ui-input_option-title-0000 {
  color: #001E2B;
}

.emotion-9:hover .lg-ui-input_option-left-glyph-0000 {
  color: #001E2B;
}

.emotion-9:focus {
  outline: none;
  border: unset;
}

.emotion-9::before {
  content: '';
  position: absolute;
  left: 0;
  top: 50%;
  width: 4px;
  height: calc(100% - 8px);
  min-height: 24px;
  background-color: rgba(255, 255, 255, 0);
  border-radius: 0 6px 6px 0;
  -webkit-transform: scale3d(0, 0.3, 0) translateY(-50%);
  -moz-transform: scale3d(0, 0.3, 0) translateY(-50%);
  -ms-transform: scale3d(0, 0.3, 0) translateY(-50%);
  transform: scale3d(0, 0.3, 0) translateY(-50%);
  transform-origin: 0%;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: transform,background-color;
}

.emotion-9 .lg-ui-input_option-title-0000 {
  color: #001E2B;
}

.emotion-9 .lg-ui-input_option-left-glyph-0000 {
  color: #5C6C75;
}

.emotion-9,
.emotion-9:hover {
  background-color: #E3FCF7;
}

.emotion-9::before,
.emotion-9:hover::before {
  -webkit-transform: scaleY(1) translateY(-50%);
  -moz-transform: scaleY(1) translateY(-50%);
  -ms-transform: scaleY(1) translateY(-50%);
  transform: scaleY(1) translateY(-50%);
  background-color: #00A35C;
}

.emotion-9 .lg-ui-input_option-title-0000,
.emotion-9:hover .lg-ui-input_option-title-0000 {
  color: #00684A;
  font-weight: bold;
}

.emotion-9 .lg-ui-input_option-left-glyph-0000,
.emotion-9:hover .lg-ui-input_option-left-glyph-0000 {
  color: #00A35C;
}

.emotion-9 .lg-ui-input_option-title-0000 {
  color: #E8EDEB;
}

.emotion-9 .lg-ui-input_option-description-0000 {
  color: #C1C7C6;
}

.emotion-9 .lg-ui-input_option-left-glyph-0000 {
  color: #C1C7C6;
}

.emotion-9:hover {
  background-color: #3D4F58;
}

.emotion-9:hover .lg-ui-input_option-title-0000 {
  color: #E8EDEB;
}

.emotion-9:hover .lg-ui-input_option-description-0000 {
  color: #E8EDEB;
}

.emotion-9:hover .lg-ui-input_option-left-glyph-0000 {
  color: #F9FBFA;
}

.emotion-9,
.emotion-9:hover {
  background-color: #001E2B;
}

.emotion-9 .lg-ui-input_option-title-0000,
.emotion-9:hover .lg-ui-input_option-title-0000 {
  color: #00ED64;
}

.emotion-9 .lg-ui-input_option-left-glyph-0000,
.emotion-9:hover .lg-ui-input_option-left-glyph-0000 {
  color: #00ED64;
}

.emotion-9::before,
.emotion-9:hover::before {
  background-color: #00ED64;
}

.emotion-9.emotion-9 {
  padding: 1px 24px;
}

.emotion-10 {
  display: grid;
  grid-template-columns: 16px 1fr 16px;
  grid-template-areas: 'left-glyph text text';
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.emotion-11 {
  grid-area: left-glyph;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5C6C75;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
}

.emotion-13 {
  grid-area: text;
  line-height: 16px;
}

.emotion-14 {
  overflow-wrap: anywhere;
  font-size: inherit;
  line-height: inherit;
  font-weight: normal;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-17 {
  display: block;
  position: relative;
  list-style: none;
  outline: none;
  border: unset;
  margin: 0;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  padding: 12px 12px;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: background-color,color;
  color: #001E2B;
  background-color: #FFFFFF;
  display: block;
  width: 100%;
  min-height: 32px;
  background-color: #FFFFFF;
  padding: 8px 12px;
  background-color: #001E2B;
}

.emotion-17:hover {
  outline: none;
  color: #001E2B;
  background-color: #E8EDEB;
}

.emotion-17:hover .lg-ui-input_option-title-0000 {
  color: #001E2B;
}

.emotion-17:hover .lg-ui-input_option-left-glyph-0000 {
  color: #001E2B;
}

.emotion-17:focus {
  outline: none;
  border: unset;
}

.emotion-17::before {
  content: '';
  position: absolute;
  left: 0;
  top: 50%;
  width: 4px;
  height: calc(100% - 8px);
  min-height: 24px;
  background-color: rgba(255, 255, 255, 0);
  border-radius: 0 6px 6px 0;
  -webkit-transform: scale3d(0, 0.3, 0) translateY(-50%);
  -moz-transform: scale3d(0, 0.3, 0) translateY(-50%);
  -ms-transform: scale3d(0, 0.3, 0) translateY(-50%);
  transform: scale3d(0, 0.3, 0) translateY(-50%);
  transform-origin: 0%;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: transform,background-color;
}

.emotion-17 .lg-ui-input_option-title-0000 {
  color: #001E2B;
}

.emotion-17 .lg-ui-input_option-left-glyph-0000 {
  color: #5C6C75;
}

.emotion-17 .lg-ui-input_option-title-0000 {
  color: #E8EDEB;
}

.emotion-17 .lg-ui-input_option-description-0000 {
  color: #C1C7C6;
}

.emotion-17 .lg-ui-input_option-left-glyph-0000 {
  color: #C1C7C6;
}

.emotion-17:hover {
  background-color: #3D4F58;
}

.emotion-17:hover .lg-ui-input_option-title-0000 {
  color: #E8EDEB;
}

.emotion-17:hover .lg-ui-input_option-description-0000 {
  color: #E8EDEB;
}

.emotion-17:hover .lg-ui-input_option-left-glyph-0000 {
  color: #F9FBFA;
}

.emotion-17.emotion-17 {
  padding: 1px 24px;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Sun Icon"
          class="emotion-3"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
        >
          <path
            d="M12.24 10.83C11.85 10.44 11.22 10.44 10.83 10.83C10.44 11.22 10.44 11.85 10.83 12.24L11.54 12.95C11.93 13.34 12.56 13.34 12.95 12.95C13.34 12.56 13.34 11.93 12.95 11.54L12.24 10.83Z"
            fill="currentColor"
          />
          <path
            d="M8 12C7.45 12 7 12.45 7 13V14C7 14.55 7.45 15 8 15C8.55 15 9 14.55 9 14V13C9 12.45 8.55 12 8 12Z"
            fill="currentColor"
          />
          <path
            d="M8 11C9.65685 11 11 9.65685 11 8C11 6.34315 9.65685 5 8 5C6.34315 5 5 6.34315 5 8C5 9.65685 6.34315 11 8 11Z"
            fill="currentColor"
          />
          <path
            d="M14 7H13C12.45 7 12 7.45 12 8C12 8.55 12.45 9 13 9H14C14.55 9 15 8.55 15 8C15 7.45 14.55 7 14 7Z"
            fill="currentColor"
          />
          <path
            d="M3.76 10.83L3.05 11.54C2.66 11.93 2.66 12.56 3.05 12.95C3.44 13.34 4.07 13.34 4.46 12.95L5.17 12.24C5.56 11.85 5.56 11.22 5.17 10.83C4.78 10.44 4.15 10.44 3.76 10.83Z"
            fill="currentColor"
          />
          <path
            d="M8 4C8.55 4 9 3.55 9 3V2C9 1.45 8.55 1 8 1C7.45 1 7 1.45 7 2V3C7 3.55 7.45 4 8 4Z"
            fill="currentColor"
          />
          <path
            d="M3.76 5.17C4.15 5.56 4.78 5.56 5.17 5.17C5.56 4.78 5.56 4.15 5.17 3.76L4.46 3.05C4.07 2.66 3.44 2.66 3.05 3.05C2.66 3.44 2.66 4.07 3.05 4.46L3.76 5.17Z"
            fill="currentColor"
          />
          <path
            d="M4 8C4 7.45 3.55 7 3 7H2C1.45 7 1 7.45 1 8C1 8.55 1.45 9 2 9H3C3.55 9 4 8.55 4 8Z"
            fill="currentColor"
          />
          <path
            d="M12.24 5.17L12.95 4.46C13.34 4.07 13.34 3.44 12.95 3.05C12.56 2.66 11.93 2.66 11.54 3.05L10.83 3.76C10.44 4.15 10.44 4.78 10.83 5.17C11.22 5.56 11.85 5.56 12.24 5.17Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4"
    />
    <div
      class="emotion-5"
      popover="manual"
      style="--lg-popover-max_height: 0px; --lg-popover-max_width: 0px;"
    >
      <div
        class="lg-ui-popover-content-0000"
      >
        <div
          class="emotion-6"
          data-theme="light"
        >
          <ul
            class="emotion-7"
            data-lgid="lg-menu"
            data-testid="lg-menu"
            role="menu"
          >
            <li
              class="lg-ui-lg-menu-menu_item-0000 emotion-8"
              data-testid="lg-menu-menu_item"
              id="_0001ogs5w"
              role="none"
            >
              <button
                aria-current="true"
                aria-disabled="false"
                class="lg-ui-input_option-0000 emotion-9"
                data-depth="0"
                data-id="_0001ogs5w"
                data-index="0"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                <div
                  class="lg-ui-input_option-content-0000 emotion-10"
                >
                  <div
                    class="lg-ui-input_option-left-glyph-0000 emotion-11"
                  >
                    <svg
                      aria-label="Sun Icon"
                      class="emotion-3"
                      height="20"
                      role="img"
                      viewBox="0 0 16 16"
                      width="20"
                    >
                      <path
                        d="M12.24 10.83C11.85 10.44 11.22 10.44 10.83 10.83C10.44 11.22 10.44 11.85 10.83 12.24L11.54 12.95C11.93 13.34 12.56 13.34 12.95 12.95C13.34 12.56 13.34 11.93 12.95 11.54L12.24 10.83Z"
                        fill="currentColor"
                      />
                      <path
                        d="M8 12C7.45 12 7 12.45 7 13V14C7 14.55 7.45 15 8 15C8.55 15 9 14.55 9 14V13C9 12.45 8.55 12 8 12Z"
                        fill="currentColor"
                      />
                      <path
                        d="M8 11C9.65685 11 11 9.65685 11 8C11 6.34315 9.65685 5 8 5C6.34315 5 5 6.34315 5 8C5 9.65685 6.34315 11 8 11Z"
                        fill="currentColor"
                      />
                      <path
                        d="M14 7H13C12.45 7 12 7.45 12 8C12 8.55 12.45 9 13 9H14C14.55 9 15 8.55 15 8C15 7.45 14.55 7 14 7Z"
                        fill="currentColor"
                      />
                      <path
                        d="M3.76 10.83L3.05 11.54C2.66 11.93 2.66 12.56 3.05 12.95C3.44 13.34 4.07 13.34 4.46 12.95L5.17 12.24C5.56 11.85 5.56 11.22 5.17 10.83C4.78 10.44 4.15 10.44 3.76 10.83Z"
                        fill="currentColor"
                      />
                      <path
                        d="M8 4C8.55 4 9 3.55 9 3V2C9 1.45 8.55 1 8 1C7.45 1 7 1.45 7 2V3C7 3.55 7.45 4 8 4Z"
                        fill="currentColor"
                      />
                      <path
                        d="M3.76 5.17C4.15 5.56 4.78 5.56 5.17 5.17C5.56 4.78 5.56 4.15 5.17 3.76L4.46 3.05C4.07 2.66 3.44 2.66 3.05 3.05C2.66 3.44 2.66 4.07 3.05 4.46L3.76 5.17Z"
                        fill="currentColor"
                      />
                      <path
                        d="M4 8C4 7.45 3.55 7 3 7H2C1.45 7 1 7.45 1 8C1 8.55 1.45 9 2 9H3C3.55 9 4 8.55 4 8Z"
                        fill="currentColor"
                      />
                      <path
                        d="M12.24 5.17L12.95 4.46C13.34 4.07 13.34 3.44 12.95 3.05C12.56 2.66 11.93 2.66 11.54 3.05L10.83 3.76C10.44 4.15 10.44 4.78 10.83 5.17C11.22 5.56 11.85 5.56 12.24 5.17Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="emotion-13"
                  >
                    <div
                      class="lg-ui-input_option-title-0000 emotion-14"
                    >
                      <div
                        class="emotion-15"
                      >
                        Light
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li
              class="lg-ui-lg-menu-menu_item-0000 emotion-8"
              data-testid="lg-menu-menu_item"
              id="_0003cxkbt"
              role="none"
            >
              <button
                aria-current="false"
                aria-disabled="false"
                class="lg-ui-input_option-0000 emotion-17"
                data-depth="0"
                data-id="_0003cxkbt"
                data-index="1"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                <div
                  class="lg-ui-input_option-content-0000 emotion-10"
                >
                  <div
                    class="lg-ui-input_option-left-glyph-0000 emotion-11"
                  >
                    <svg
                      aria-label="Moon Icon"
                      class="emotion-3"
                      height="20"
                      role="img"
                      viewBox="0 0 16 16"
                      width="20"
                    >
                      <path
                        d="M13.7868 10.0736C13.5564 9.8432 13.2012 9.7952 12.9228 9.9584C12.798 10.0352 12.6636 10.0928 12.5292 10.1504C10.7628 10.8704 8.6412 9.9392 7.8252 7.9424C7.0956 6.1472 7.7388 4.208 9.1692 3.3248C9.438 3.1616 9.5724 2.8352 9.486 2.5184C9.3996 2.2016 9.1116 2 8.7948 2H8.67C5.358 2 2.67 4.688 2.67 8C2.67 11.312 5.358 14 8.67 14C10.9164 14 12.8748 12.7616 13.902 10.9376C14.0652 10.6592 14.0076 10.304 13.7772 10.0736H13.7868Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="emotion-13"
                  >
                    <div
                      class="lg-ui-input_option-title-0000 emotion-14"
                    >
                      <div
                        class="emotion-15"
                      >
                        Dark
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li
              class="lg-ui-lg-menu-menu_item-0000 emotion-8"
              data-testid="lg-menu-menu_item"
              id="_00051echq"
              role="none"
            >
              <button
                aria-current="false"
                aria-disabled="false"
                class="lg-ui-input_option-0000 emotion-17"
                data-depth="0"
                data-id="_00051echq"
                data-index="2"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                <div
                  class="lg-ui-input_option-content-0000 emotion-10"
                >
                  <div
                    class="lg-ui-input_option-left-glyph-0000 emotion-11"
                  >
                    <svg
                      height="20"
                      id="Layer_1"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="currentColor"
                      >
                        <path
                          d="M12,18.92c-.29,0-.55.11-.76.32-.21.21-.32.46-.32.76v2c0,.29.11.55.32.76.21.21.46.32.76.32s.55-.11.76-.32c.21-.21.32-.46.32-.76v-2c0-.29-.11-.55-.32-.76-.21-.21-.46-.32-.76-.32Z"
                        />
                        <path
                          d="M5.59,7.1c.22.21.48.31.77.32.29,0,.54-.1.74-.32.21-.22.31-.47.31-.76,0-.29-.1-.54-.31-.76l-1.06-1.07c-.21-.22-.46-.33-.76-.32-.3,0-.55.12-.76.34-.21.22-.32.48-.33.78,0,.29.1.54.32.75l1.08,1.05Z"
                        />
                        <path
                          d="M5.07,12c0-.29-.11-.55-.32-.76-.21-.21-.46-.32-.76-.32H2c-.29,0-.55.11-.76.32-.21.21-.32.46-.32.76s.11.55.32.76c.21.21.46.32.76.32h2c.29,0,.55-.11.76-.32.21-.21.32-.46.32-.76Z"
                        />
                        <path
                          d="M6.35,16.59c-.29,0-.54.11-.76.31l-1.08,1.06c-.22.21-.33.46-.32.76s.12.55.34.76c.22.2.48.31.78.32s.54-.09.75-.31l1.04-1.08c.2-.22.31-.48.32-.77.01-.29-.09-.54-.31-.74-.22-.21-.47-.31-.76-.31Z"
                        />
                        <path
                          d="M15,14.27c-1.48,0-2.73-.51-3.74-1.52-1.02-1.02-1.53-2.26-1.53-3.74,0-.53.09-1.02.23-1.5-.53.24-1.01.57-1.46,1.01-.96.96-1.44,2.13-1.44,3.49s.48,2.53,1.44,3.49c.96.96,2.13,1.44,3.49,1.44s2.53-.48,3.49-1.44c.44-.44.77-.93,1.01-1.46-.48.14-.97.23-1.5.23Z"
                        />
                        <path
                          d="M18.41,16.9c-.22-.2-.48-.31-.77-.32-.29-.01-.54.09-.74.31-.21.22-.31.47-.31.76,0,.29.11.54.31.76l1.06,1.08c.21.22.46.33.76.32.3,0,.55-.12.76-.34.21-.22.32-.48.33-.78,0-.29-.1-.54-.32-.75l-1.07-1.04Z"
                        />
                      </g>
                      <g>
                        <path
                          d="M16.77,12.23c-1.31,0-2.41-.45-3.3-1.34-.9-.9-1.35-2-1.35-3.3,0-1.12.36-2.12,1.08-2.99.72-.88,1.65-1.4,2.8-1.59.15-.03.28-.03.38,0,.11.03.19.09.25.17.06.08.1.18.1.3,0,.12-.03.25-.09.4-.1.2-.17.41-.23.62s-.08.44-.08.67c0,.79.28,1.47.84,2.03.56.56,1.24.84,2.03.84.23,0,.46-.03.68-.08.22-.05.43-.13.62-.22.14-.06.27-.09.39-.09.12,0,.22.03.29.09.08.06.14.13.17.24.03.1.03.23,0,.38-.17,1.11-.69,2.04-1.56,2.78-.87.74-1.88,1.11-3.02,1.11Z"
                          fill="currentColor"
                        />
                      </g>
                    </svg>
                  </div>
                  <div
                    class="emotion-13"
                  >
                    <div
                      class="lg-ui-input_option-title-0000 emotion-14"
                    >
                      <div
                        class="emotion-15"
                      >
                        System
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DarkMode Dropdown component updates dark mode when selecting a different option 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #C1C7C6;
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-1:active:before,
.emotion-1:hover:before,
.emotion-1:focus:before,
.emotion-1[data-hover='true']:before,
.emotion-1[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:active,
.emotion-1:hover,
.emotion-1[data-hover='true'] {
  color: #F9FBFA;
}

.emotion-1:active::before,
.emotion-1:hover::before,
.emotion-1[data-hover='true']::before {
  background-color: rgba(232,237,235,0.1);
}

.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  color: #F9FBFA;
  box-shadow: 0 0 0 2px #001E2B,0 0 0 4px #0498EC;
}

.emotion-1:focus-visible::before,
.emotion-1[data-focus='true']::before {
  background-color: rgba(232,237,235,0.1);
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 {
  display: none;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Moon Icon"
          class="emotion-3"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
        >
          <path
            d="M13.7868 10.0736C13.5564 9.8432 13.2012 9.7952 12.9228 9.9584C12.798 10.0352 12.6636 10.0928 12.5292 10.1504C10.7628 10.8704 8.6412 9.9392 7.8252 7.9424C7.0956 6.1472 7.7388 4.208 9.1692 3.3248C9.438 3.1616 9.5724 2.8352 9.486 2.5184C9.3996 2.2016 9.1116 2 8.7948 2H8.67C5.358 2 2.67 4.688 2.67 8C2.67 11.312 5.358 14 8.67 14C10.9164 14 12.8748 12.7616 13.902 10.9376C14.0652 10.6592 14.0076 10.304 13.7772 10.0736H13.7868Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4"
    />
  </div>
</DocumentFragment>
`;
